main layout looking ok, still issue with footer overlapping header

--- a/index.css
+++ b/index.css
@@ -1,30 +1,92 @@
 
 
+
 body {
   font-family: Helvetica, Arial, sans-serif;
-  padding:0;
-  text-align: center;
 }
 
-div {
-  margin:0;
-  padding:0;
+body, div, p, ul, li, canvas {
+  margin: 0;
+  padding: 0;
+}
+
+ul {
+  list-style-type: none;
 }
 
 h1 {
-  font-size: 2em;
+  margin:2% 0;
+  font-size: 180%;
+  white-space: nowrap;
 }
 
-p {
-  margin:0;
-  padding:0;
+.canvasContainer {
+  z-index: -1;
+  position: absolute;
+  left: 0;
+  right: 0;
 }
 
-div#header {
-  margin:10px 0 10px 0;
+.header a, .footer a {
+  color: #0000cc;
+  font-size: 120%;
+  font-weight: bold;
+  text-decoration: none;
+  white-space: nowrap;
 }
 
-div#scene {
-  clear:both;
+.footer {
+  text-align:right;
+  position:absolute;
+  bottom:10%;
+  right:10%;
+  color: #444444;
+  margin-top: 70%;
 }
+
+
+
+
+
+
+
+
+
+
+
+@media screen and (min-width:480px) {
+
+  .header {
+    text-align: right;
+    position: absolute;
+    top: 10%;
+    right: 10%;
+    width: 30%;
+  }
+
+  .header li {
+    margin-top: 3%;
+  }
+
+
+
+}
+
+
+
+
+
+
+
+@media screen and (max-width: 479px) {
+
+  body {
+    text-align: center;
+  }
+
+}
+
+
+
+
 
